packages/fuels-abigen-macro/tests/ui/abigen_macro/missing_abi_attribute.rs
use fuels_abigen_macro::abigen;

abigen!(Contract(name = "SomeName"));

fn main() {}
